# telegram-notifications

./: .env.example  .env.test  .gitignore  CODECOV_SETUP.md  Cargo.toml  Dockerfile  README.md  RUSTLS_MIGRATION.md  WARP.md  ci-test.sh  coverage-debug.sh  docker-compose.yml  example.sh  generate-coverage.sh  justfile  lcov-test.info  lcov.info
.github/workflows/: ci.yml  release.yml
src/: api.rs  config.rs  handlers.rs  lib.rs  main.rs  telegram.rs
tests/: e2e_tests.rs
